<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Limousine Transport</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title">Limousine Transport</string>
    <string name="booking_upcoming_tab">Upcoming</string>
    <string name="booking_upcoming_title">Upcoming Booking</string>
    <string name="booking_history_tab">History</string>
    <string name="booking_history_title">Booking History</string>
    <string name="my_profile_tab">Me</string>
    <string name="my_profile_title">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="more">More</string>
    <string name="push_notification">Push Notification</string>
    <string name="open_website">Open booking system website</string>
    <string name="reload_data">Reload data from server</string>
    <string name="logout">Logout</string>
    <string name="from">Pick-up Address</string>
    <string name="to">Drop-off Address</string>
    <string name="stop1">Stop 1 Address</string>
    <string name="stop2">Stop 2 Address</string>
    <string name="lead_passenger">Lead Passenger</string>
    <string name="book_by">Book by</string>
    <string name="assign_by">Assign by</string>
    <string name="driver">Driver</string>
    <string name="broadcast">Broadcast</string>
    <string name="reassign_driver">Reassign</string>
    <string name="complete">Complete</string>
    <string name="passenger_signature">Passenger Signature</string>

    <string name="complete_job_tile">Have completed the job?</string>
    <string name="complete_job_tip">Please enter your claim amount : </string>
    <string name="reassign_driver_title">Please assign a driver.</string>

    <!-- Common -->
    <string name="sample">Sample</string>
    <string name="message">Message</string>
    <string name="call">Call</string>
    <string name="share">Share</string>
    <string name="menu">Menu</string>
    <string name="chinese_english">中文／English</string>
    <string name="error_login_fail"><![CDATA[Sorry for your mobile number or password is wrong. Please try again.]]></string>
    <string name="error_connect_fail"><![CDATA[Sorry for connection exception. Please try again.]]></string>
    <string name="title_activity_alarm_list">AlarmListActivity</string>

    <string name="version_info">Version 1.2.1</string>
    <string name="insertSD">Please insert SD card.</string>

    <!-- Signature Info -->
    <string name="signatureHint">PLEASE SIGN ABOVE</string>
    <string name="clear">Clear</string>
    <string name="done">&#160;Done</string>
    <string name="cancel">Cancel</string>
    <string name="signature">Signature</string>
    <string name="update">Update</string>
</resources>
