<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@color/gray_bg" android:orientation="vertical" android:minWidth="300dp" >

    <TextView android:id="@+id/title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:gravity="center"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="12dp" android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="20sp" android:textColor="@color/primary_text" android:text="@string/complete_job_tile"/>

    <TextView android:id="@+id/tip"  android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="8dp"
        android:textSize="16sp" android:textColor="@color/primary_text" android:text="@string/complete_job_tip"/>

    <Spinner android:id="@+id/currency_spinner" android:layout_width="fill_parent" android:layout_height="50dp"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="8dp"></Spinner>

    <EditText android:id="@+id/price_et" android:layout_width="match_parent" android:layout_height="50dp" android:inputType="numberDecimal"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="8dp"/>

    <Button android:id="@+id/booking_complete_btn" android:layout_width="fill_parent" android:layout_height="40dp"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
        android:text="@string/complete" android:textSize="16sp" style="@style/btn_haiti"  />

    <Button android:id="@+id/cancel_btn" android:layout_width="fill_parent" android:layout_height="40dp"
        android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="24dp" android:layout_marginTop="8dp"
        android:text="@string/cancel" android:textSize="16sp" style="@style/btn_haiti"  />
</LinearLayout>